--- a/src/styles.css
+++ b/src/styles.css
@@ -5,12 +5,15 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  border: 4px solid green;
+  background-color: greenyellow;
 }
 body {
-  background-color: aqua;
+  background-color: white;
 }
 input {
   padding: 1rem;
-  border: 2px solid black;
+  border: 2px solid green;
   width: 80%;
+  border-radius: 2rem;
 }
