--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,9 @@
   transform: translate(-50%, -50%);
   border: 4px solid green;
   background-color: greenyellow;
+  max-width: 600px;
+  margin: auto;
+  padding: 2rem;
 }
 body {
   background-color: white;
@@ -16,4 +19,10 @@ input {
   border: 2px solid green;
   width: 80%;
   border-radius: 2rem;
+  outline: none;
+  font-weight: bold;
+  background-color: rgb(204, 255, 204);
+}
+span:hover {
+  opacity: 0.5;
 }
